--- a/.github/workflows/Complete_CI_CD_PipeLine.yml
+++ b/.github/workflows/Complete_CI_CD_PipeLine.yml
@@ -83,10 +83,10 @@ jobs:
       # -------------------
       # Run tests
       # -------------------
-      - name: Run frontend tests with coverage
+      - name: tests frontend with coverage
         run: |
             cd frontend
-            npm run coverage
+            npm test --coverage
 
       # Run Cypress E2E tests
       - name: Run Product E2E Tests
