Update Complete_CI_CD_PipeLine.yml 2

--- a/.github/workflows/Complete_CI_CD_PipeLine.yml
+++ b/.github/workflows/Complete_CI_CD_PipeLine.yml
@@ -86,7 +86,7 @@ jobs:
       - name: tests frontend with coverage
         run: |
             cd frontend
-            npm test -- --coverage --runInBand
+            npx jest --coverage --runInBand
 
       # Run Cypress E2E tests
       - name: Run Product E2E Tests
